--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	
-	<title>Python.Ru</title>
-	
+	<title>Python.ru</title>
+  <link rel="icon" type="image/png"  href="{% static "favicon/favicon.png" %} ">
 	<link media="all" rel="stylesheet" href="{% static "css/all.css" %}" />
 </head>
 <body>
