--- a/templates/blocks/footer.html
+++ b/templates/blocks/footer.html
@@ -1,12 +1,15 @@
 {% load staticfiles %}
-<footer id="footer">
+<footer class="footer">
   <div class="container">
-    <a href="mailto:team@python.ru" class="email">team@python.ru</a>
-    <span class="copyright">&copy; 2016 <a href="https://python.ru">Python.ru</a></span>
-    <ul class="social-list">
+    <!-- email -->
+    <a href="mailto:team@python.ru">team@python.ru</a>
+    <!-- social networks -->
+    <ul class="social-networks">
       {% for social_link in social_links %}
-        <li class="{{ social_link.id }}"><a href="{{ social_link.url }}">{{ social_link.name }}</a></li>
+        <li><a href="{{ social_link.url }}" class="icon-{{ social_link.id }}">{{ social_link.name }}</a></li>
       {% endfor %}
     </ul>
+    <!-- copyright -->
+    <p class="copyright">&copy; 2016 <a href="https://python.ru">Python.ru</a></p>
   </div>
 </footer>
