make top menu a real navigation menu

--- a/templates/blocks/events.html
+++ b/templates/blocks/events.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<section class="events-section">
+<section class="events-section" id="events">
   <div class="container">
     <div class="title-holder">
       <h1>Ближайшие события</h1>
