--- a/templates/blocks/header.html
+++ b/templates/blocks/header.html
@@ -7,11 +7,11 @@
     <nav class="main-nav">
       <a href="#" class="nav-opener"><span>Menu</span></a>
       <div class="nav-drop">
-        <ul class="primary-menu">
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Анонсы</a></li>
-          <li><a href="#">О проекте</a></li>
-          <li><a href="#">Ресурсы</a></li>
+        <ul class="primary-menu js-navigation">
+          <li><a href="#news">Новости</a></li>
+          <li><a href="#events">Анонсы</a></li>
+          <li><a href="#about">О проекте</a></li>
+          <li><a href="#resources">Ресурсы</a></li>
         </ul>
       </div>
     </nav>
