--- a/templates/blocks/links.html
+++ b/templates/blocks/links.html
@@ -1,5 +1,5 @@
 {% load content_filters %}
-<section class="info-section">
+<section class="info-section" id="resources">
   <div class="container">
     <div class="title"><h1>Что полезного почитать</h1></div>
     <div class="columns-holder">
