--- a/templates/blocks/about_us.html
+++ b/templates/blocks/about_us.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<section class="about-us-section">
+<section class="about-us-section" id="about">
   <div class="container">
     <!-- about us -->
     <div class="about-us">
