replace city names png map with svg one

--- a/templates/blocks/events.html
+++ b/templates/blocks/events.html
@@ -5,7 +5,7 @@
       <h1>Ближайшие события</h1>
     </div>
     <div class="image-holder">
-      <img src="{% static "images/img-map.png" %}" width="415" height="245" alt="Карта событий">
+      <img src="{% static "images/russia_outline_map.svg" %}" style="transform: rotate(-5deg);" width="415" height="245" alt="Карта событий">
     </div>
     <div class="events-holder">
       <!-- events list -->
