--- a/templates/blocks/news.html
+++ b/templates/blocks/news.html
@@ -7,7 +7,7 @@
       <article class="grid-item large">
         <div class="item-holder">
           {% if article_featured.image %}
-            <img src="{% thumbnail article_featured.image 792 529 crop=1 %}" width="792" height="529" alt="">
+            <img src="{% thumbnail article_featured.image 792 529 %}" width="792" height="529" alt="">
           {% endif %}
           <div class="description">
             <time datetime="">{{ article_featured.published_at|date:"j E Y" }}</time>
@@ -40,7 +40,7 @@
         <div class="item-holder">
           {% if article.image %}
           <div class="image-holder">
-            <img src="{% thumbnail article.image 384 256 crop=1 %}" width="384" height="256" alt="">
+            <img src="{% thumbnail article.image 384 256 %}" width="384" height="256" alt="">
           </div>
           {% endif %}
           <div class="text-holder">
