remove events map, because we don't have events yet

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
       <main>
         {% include 'blocks/news.html' %}
         {% include 'blocks/subscribe.html' %}
-        {% include 'blocks/events.html' %}
+{#        {% include 'blocks/events.html' %}#}
         {% include 'blocks/about_us.html' %}
         {% include 'blocks/links.html' %}
 {#        {% include 'blocks/contact_us.html' %}#}
