--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
       <main>
         {% include 'blocks/news.html' %}
         {% include 'blocks/subscribe.html' %}
+        {% include 'blocks/events_stub.html' %}
 {#        {% include 'blocks/events.html' %}#}
         {% include 'blocks/about_us.html' %}
         {% include 'blocks/links.html' %}
