--- a/templates/junior.html
+++ b/templates/junior.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 
+{% block header_block %}
+	{% include 'blocks/header_no_menu.html' %}
+{% endblock %}
+
+
 {% block main_content %}
-	{% include 'blocks/news.html' %}
-	{% include 'blocks/subscribe.html' %}
+	{% include 'blocks/junior.html' %}
 	{% include 'blocks/events_stub.html' %}
 	{% include 'blocks/about_us.html' %}
 	{% include 'blocks/links.html' %}
