add link to junior meetup event

--- a/templates/blocks/junior.html
+++ b/templates/blocks/junior.html
@@ -19,7 +19,9 @@
 
             <div class="junior-register-wrapper">
                 <div class="submit-holder">
-                    <button>Зарегистрироваться</button>
+                    <a href="https://moscowdjango.timepad.ru/event/433815/">
+                        <button>Зарегистрироваться</button>
+                    </a>
                 </div>
             </div>
         </div>
