make logo link to index

--- a/templates/blocks/header_no_menu.html
+++ b/templates/blocks/header_no_menu.html
@@ -4,7 +4,7 @@
 <header class="header">
   <div class="container">
     <!-- logo -->
-    <div class="logo"><a href="#"><img src="{% static 'images/logo.png' %}" width="133" height="27" alt="Python.ru"></a></div>
+    <div class="logo"><a href="/"><img src="{% static 'images/logo.png' %}" width="133" height="27" alt="Python.ru"></a></div>
     <!-- main navigation -->
     <nav class="main-nav">
       <a href="#" class="nav-opener"><span>Menu</span></a>
