--- a/templates/blocks/header.html
+++ b/templates/blocks/header.html
@@ -3,9 +3,9 @@
 
 {% block navigation_menu %}
   <ul class="primary-menu js-navigation">
-    <li><a href="/#news">Новости</a></li>
-    <li><a href="/#events">Анонсы</a></li>
-    <li><a href="/#about">О проекте</a></li>
-    <li><a href="/#resources">Ресурсы</a></li>
+    <li><a href="#news">Новости</a></li>
+    <li><a href="#events">Анонсы</a></li>
+    <li><a href="#about">О проекте</a></li>
+    <li><a href="#resources">Ресурсы</a></li>
   </ul>
 {% endblock %}
