--- a/templates/blocks/junior.html
+++ b/templates/blocks/junior.html
@@ -2,21 +2,20 @@
 
 
 <div class="container junior">
-    <h1>Python Junior</h1>
+    <h1>Python Junior Meetup</h1>
     <div>
         <div class="junior-about">
             <h2>Что это</h2>
-            <p>Python Junior – встреча в Москве для начинающих программистов на Python.</p>
-            <p>Наша цель – помочь быстрее разобраться с базовыми вопросами, научить писать более качественный код и дать возможность пообщаться с единомышленниками.</p>
-            <p>Мы хотим, чтобы как можно больше разработчиков на Python были знакомы друг с другом. Когда есть, с кем поболтать, спросить, помочь или поработато – это же круто!</p>
+            <p>Python Junior&nbsp;&mdash; встреча в&nbsp;Москве для начинающих программистов на&nbsp;Python.</p>
+            <p>Наша цель&nbsp;&mdash; помочь быстрее разобраться с&nbsp;базовыми вопросами, научить писать более качественный код и&nbsp;дать возможность пообщаться с&nbsp;единомышленниками.</p>
+            <p>Мы&nbsp;хотим, чтобы как можно больше разработчиков на&nbsp;Python были знакомы друг с&nbsp;другом. Когда есть, с&nbsp;кем поболтать, спросить, помочь или поработать&nbsp;&mdash; это&nbsp;же круто!</p>
 
-            <h2>Место и время</h2>
+            <h2>Место и&nbsp;время</h2>
             <p>
-            <div>Митап начнётся <strong>9-го февраля в 19:00</strong> в офисе Ingram Micro.</div>
-            <div>Адрес: Ленинградский Проспект, дом 15, стр. 18.</div>
-            <div>10 минут пешком от станции метро Белорусская.</div>
+            <div>Митап начнётся <strong>9-го февраля в&nbsp;19:00</strong>&nbsp;в офисе Ingram Micro.</div>
+            <div>Адрес: Ленинградский Проспект, дом&nbsp;15, стр.&nbsp;18.</div>
+            <div>10&nbsp;минут пешком от&nbsp;станции метро Белорусская.</div>
             </p>
-
             <div class="junior-register-wrapper">
                 <div class="submit-holder">
                     <a href="https://moscowdjango.timepad.ru/event/433815/">
@@ -32,13 +31,14 @@
                 <div class="speaker-image">
                     <img src="https://moscowdjango.s3.amazonaws.com/media/speakers/gp.jpg">
                     <div class="author">Григорий Петров</div>
+                    <a class="work" href="https://voximplant.com/" target="_blank">VoxImplant</a>
                 </div>
                 <div class="details">
-                    <h4>Что такое переменные</h4>
-                    <div>В своем выступлении я впервые попробую объяснить переменные:
-                    не рассказывая предварительно как работает компьютер, память и компилятор;
-                    не вводя мешок дополнительных сущностей вроде “присваивание”, “данные”, “оператор” и непереводимое “evaluate”;
-                    не проводя аналогии с математикой.</div>
+                <h4>Что такое переменные</h4>
+                <div>В&nbsp;своем выступлении я&nbsp;впервые попробую объяснить переменные:
+                не&nbsp;рассказывая предварительно как работает компьютер, память и&nbsp;компилятор;
+                не&nbsp;вводя мешок дополнительных сущностей вроде &laquo;присваивание&raquo;, &laquo;данные&raquo;, &laquo;оператор&raquo; и&nbsp;непереводимое &laquo;evaluate&raquo;;
+                не&nbsp;проводя аналогии с&nbsp;математикой.</div>
                 </div>
             </div>
 
@@ -46,10 +46,11 @@
                 <div class="speaker-image">
                     <img src="{% static "images/people/haerov.png" %}">
                     <div class="author">Александр Хаёров</div>
+                    <a class="work" href="http://www.ingrammicro.com/" target="_blank">Ingram Micro</a>
                 </div>
                 <div class="details">
                     <h4>Система типов в Python</h4>
-                    <div>Типизация – важный аспект, который зачастую характеризует тот или иной язык программирования, наделяя его разными свойствами. В докладе будут рассмотрена общая информация о типизации, ее роли. Узнаем подробно какая типизация в Python и как использовать для написания лучшего кода.</div>
+                    <div>Типизация&nbsp;&mdash; важный аспект, который зачастую характеризует тот или иной язык программирования, наделяя его разными свойствами. В&nbsp;докладе будут рассмотрена общая информация о&nbsp;типизации, ее&nbsp;роли. Узнаем подробно какая типизация в&nbsp;Python и&nbsp;как использовать для написания лучшего кода.</div>
                 </div>
             </div>
 
@@ -57,11 +58,12 @@
                 <div class="speaker-image">
                     <img src="{% static "images/people/lebedev.png" %}">
                     <div class="author">Илья Лебедев</div>
+                    <a class="work" href="https://devman.org/" target="_blank">Devman</a>
                 </div>
                 <div class="details">
                     <h4>Правила именования функций</h4>
-                    <div>Правильно называть сущности очень важно. Плохие названия превратят хороший код в плохой и нечитаемый.
-                        В докладе я расскажу о практиках, которые помогут начинающим разработчикам. Их легко применять на практике и они делают код заметно качественнее.
+                    <div>Правильно называть сущности очень важно. Плохие названия превратят хороший код в&nbsp;плохой и&nbsp;нечитаемый.
+                        В&nbsp;докладе я&nbsp;расскажу о&nbsp;практиках, которые помогут начинающим разработчикам. Их&nbsp;легко применять на&nbsp;практике и&nbsp;они делают код заметно качественнее.
                     </div>
                 </div>
             </div>
