add junior translation

--- a/templates/blocks/junior.html
+++ b/templates/blocks/junior.html
@@ -3,6 +3,9 @@
 
 <div class="container junior">
     <h1>Python Junior Meetup</h1>
+    <div style="text-align: center">
+        <iframe width="854" height="480" src="https://www.youtube.com/embed/u1_1Ca32GuI" frameborder="0" allowfullscreen></iframe>
+    </div>
     <div>
         <div class="junior-about">
             <h2>Что это</h2>
@@ -35,6 +38,7 @@
                 </div>
                 <div class="details">
                 <h4>Что такое переменные</h4>
+                <div class="slides_wrapper"><a href="https://docs.google.com/presentation/d/1S9LtH5aMGvGm9MB2mWQPLsFXPexSYhw1aYo4UQ5Uriw/edit#slide=id.g1bc1d2b6f7_0_93">слайды</a></div>
                 <div>В&nbsp;своем выступлении я&nbsp;впервые попробую объяснить переменные:
                 не&nbsp;рассказывая предварительно как работает компьютер, память и&nbsp;компилятор;
                 не&nbsp;вводя мешок дополнительных сущностей вроде &laquo;присваивание&raquo;, &laquo;данные&raquo;, &laquo;оператор&raquo; и&nbsp;непереводимое &laquo;evaluate&raquo;;
@@ -50,6 +54,7 @@
                 </div>
                 <div class="details">
                     <h4>Система типов в Python</h4>
+                    <div class="slides_wrapper"><a href="https://www.dropbox.com/s/f4ivjii13ek8p7a/khaerov-python-typing.pptx?dl=0">слайды</a></div>
                     <div>Типизация&nbsp;&mdash; важный аспект, который зачастую характеризует тот или иной язык программирования, наделяя его разными свойствами. В&nbsp;докладе будут рассмотрена общая информация о&nbsp;типизации, ее&nbsp;роли. Узнаем подробно какая типизация в&nbsp;Python и&nbsp;как использовать для написания лучшего кода.</div>
                 </div>
             </div>
@@ -62,6 +67,7 @@
                 </div>
                 <div class="details">
                     <h4>Правила именования функций</h4>
+                    <div class="slides_wrapper"><a href="http://melevir.com/talks/python_junior.html">слайды</a></div>
                     <div>Правильно называть сущности очень важно. Плохие названия превратят хороший код в&nbsp;плохой и&nbsp;нечитаемый.
                         В&nbsp;докладе я&nbsp;расскажу о&nbsp;практиках, которые помогут начинающим разработчикам. Их&nbsp;легко применять на&nbsp;практике и&nbsp;они делают код заметно качественнее.
                     </div>
