--- a/templates/blocks/junior.html
+++ b/templates/blocks/junior.html
@@ -3,9 +3,9 @@
 
 <div class="container junior">
     <h1>Python Junior Meetup</h1>
-    <div style="text-align: center">
-        <iframe width="854" height="480" src="https://www.youtube.com/embed/u1_1Ca32GuI" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <!--<div style="text-align: center">-->
+        <!--<iframe width="854" height="480" src="https://www.youtube.com/embed/u1_1Ca32GuI" frameborder="0" allowfullscreen></iframe>-->
+    <!--</div>-->
     <div>
         <div class="junior-about">
             <h2>Что это</h2>
@@ -19,13 +19,13 @@
             <div>Адрес: Ленинградский Проспект, дом&nbsp;15, стр.&nbsp;18.</div>
             <div>10&nbsp;минут пешком от&nbsp;станции метро Белорусская.</div>
             </p>
-            <div class="junior-register-wrapper">
-                <div class="submit-holder">
-                    <a href="https://moscowdjango.timepad.ru/event/433815/">
-                        <button>Зарегистрироваться</button>
-                    </a>
-                </div>
-            </div>
+            <!--<div class="junior-register-wrapper">-->
+                <!--<div class="submit-holder">-->
+                    <!--<a href="https://moscowdjango.timepad.ru/event/433815/">-->
+                        <!--<button>Зарегистрироваться</button>-->
+                    <!--</a>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
         <div class="junior-program">
             <h2>Программа</h2>
